@@ -7621,6 +7621,9 @@
                             <para>Fixed problem #637501 (advrename: metatag popup menu shows wrong items)</para>
                         </listitem>
                         <listitem>
+                            <para>Fixed problem #638954 (search path is wrong for devices)</para>
+                        </listitem>
+                        <listitem>
                             <para>Fixed problem with toggling path/basename/filename selections in copy/move dialogs</para>
                         </listitem>
                         <listitem>
